--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="cuteFerret.png" />
+    <link rel="icon" href="loudspeaker.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NC News</title>
+    <title>The Loudest: News, Sports, Health, Lifestyle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
